== 0.2.7 2008-9-10 The lets fix the last release release

There was an error in the RSA requests using oauth tokens. Thanks to Philip Lipu Tsai for noticing this.

== 0.2.6 2008-9-9 The lets RSA release

- Bill Kocik's fix for Ruby 1.8.7
- Fixed rsa verification, so you can actually create an OAuth server yourself now using Ruby and RSA
- Added better testing for RSA
- Fixed issue where token was being included for rsa signatures
- Chris Mear added support for a private_key_file option for rsa signatures 
- Scott Hill fixed several edge cases where parameters were incorrectly being signed
- Patch from choonkeat fixing a problem with rsa signing.

== 0.2.2 2008-2-22 Lets actually support SSL release

It didn't actually use https when required.

== 0.2 2008-1-19 All together now release

This is a big release, where we have merged the efforts of various parties into one common library. This means there are definitely some API changes you should be aware of. They should be minimal but please have a look at the unit tests.

== 0.1.2 2007-12-1

* 1 Fixed a problem where incoming request didn't check whether oauth parameters where missing. While not giving unauthorized access it did cause extra processing where not necessary.
* 2 Includes Pat's fix for getting the realm out.

== 0.1.1 2007-11-26

* 1 First release as a GEM
  * Moved all non rails functions into this GEM from the Rails plugin http://code.google.com/p/oauth-plugin/