@@ -33,7 +33,7 @@
     <h1>Ruby OAuth GEM</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/oauth"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/oauth" class="numbers">0.2.6</a>
+      <a href="http://rubyforge.org/projects/oauth" class="numbers">0.2.7</a>
     </div>
     <h2>What</h2>
 <p>This is a RubyGem for implementing both OAuth clients and servers in Ruby applications.</p>
