@@ -1,3 +1,5 @@
+Fix in plain text signatures to bug found by Andrew Arrow. Who contributed new new unit tests for plain text sigs.
+
 == 0.2.7 2008-9-10 The lets fix the last release release
 
 There was an error in the RSA requests using oauth tokens. Thanks to Philip Lipu Tsai for noticing this.
